# QCElemental

./: .buildinfo  .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  .yapfignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  api.html  changelog.html  codecov.yml  covalent_radii.html  genindex.html  index.html  install.html  model_common.html  model_molecule.html  model_result.html  models.html  objects.inv  periodic_table.html  physconst.html  py-modindex.html  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.cfg  setup.py  vanderwaals_radii.html  versioneer.py
.doctrees/: api.doctree  changelog.doctree  covalent_radii.doctree  index.doctree  install.doctree  model_common.doctree  model_molecule.doctree  model_result.doctree  models.doctree  periodic_table.doctree  physconst.doctree  vanderwaals_radii.doctree
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codeql.yml
.scripts/: travis-ci_get_miniconda.sh
AtomicInput/: test_repr_result.json
AtomicResult/: test_error_correction_protocol[False-defined1-False-defined_result1].json  test_error_correction_protocol[None-None-True-None].json  test_native_protocols[None-provided1-expected1].json  test_native_protocols[all-provided3-expected3].json  test_native_protocols[all-provided4-expected4].json  test_native_protocols[input-provided2-expected2].json  test_native_protocols[input-provided5-expected5].json  test_native_protocols[none-provided0-expected0].json  test_result_build.json  test_result_build_stdout.json  test_result_build_stdout_delete.json  test_result_build_wavefunction_delete.json  test_wavefunction_build.json  test_wavefunction_protocols[None-True-provided1-expected1].json  test_wavefunction_protocols[all-False-provided2-expected2].json  test_wavefunction_protocols[all-True-provided3-expected3].json  test_wavefunction_protocols[none-True-provided0-expected0].json  test_wavefunction_protocols[orbitals_and_eigenvalues-False-provided4-expected4].json  test_wavefunction_protocols[orbitals_and_eigenvalues-True-provided5-expected5].json  test_wavefunction_protocols[return_results-True-provided6-expected6].json
AtomicResultProperties/: test_result_derivatives_array.json  test_result_properties_array.json  test_result_properties_default_skip.json
BasisSet/: test_basis_set_build.json
Molecule/: test_1_14a.json  test_1_15a.json  test_2_14b.json  test_2_15b.json  test_failed_operation.json  test_froto_1_16a.json  test_froto_2_16a.json  test_hessian_align.json  test_molecule_to_string[subject1-kwargs0-ans1_ngslviewsdf].json  test_molecule_to_string[subject1_nocon-kwargs1-ans1_ngslviewsdf].json  test_molecule_to_string[subject2-kwargs2-ans2_ngslviewsdf].json  test_relative_geoms_align_fixed.json  test_relative_geoms_align_free.json  test_tofro_16b[2].json
Provenance/: test_repr_provenance.json
_images/: inheritance-01c60c535fe33b573c5618f5d990547c414a96b7.png.map  inheritance-03b9d345e33937e6cafecb77c4b59f18f44a7b44.png.map  inheritance-62ae388973466b3a83e22fb4f3b1ba4c8a85709c.png.map  inheritance-7f39d7fa2df6bbe368f9b9509d129875fbbefb64.png.map  inheritance-8d38f5389d4de116170ad5929abbeab40fa72116.png.map  inheritance-93ef0c947529f43ff3dc4d24ea27ba99a8b184f6.png.map  inheritance-c36f266a5441028482d10956c61f2a993b5adf56.png.map  inheritance-cec63e481f5f4eca090e08f7bc2f592dc3e19c34.png.map
_modules/: index.html
_sources/: changelog.rst.txt  install.rst.txt  model_common.rst.txt  model_molecule.rst.txt  model_result.rst.txt  vanderwaals_radii.rst.txt
_static/: documentation_options.js
api/: qcelemental.ChoicesError.html  qcelemental.CovalentRadii.html  qcelemental.DataUnavailableError.html  qcelemental.Datum.html  qcelemental.MoleculeFormatError.html  qcelemental.NotAnElementError.html  qcelemental.PhysicalConstantsContext.html  qcelemental.ValidationError.html  qcelemental.VanderWaalsRadii.html  qcelemental.compare.html  qcelemental.compare_recursive.html  qcelemental.compare_values.html  qcelemental.constants.html  qcelemental.covalent_radii.CovalentRadii.html  qcelemental.covalentradii.html  qcelemental.models.AlignmentMill.html  qcelemental.models.AtomicInput.html  qcelemental.models.AtomicResult.html  qcelemental.models.AtomicResultProperties.html  qcelemental.models.AutodocBaseSettings.html  qcelemental.models.BasisSet.html  qcelemental.models.ComputeError.html  qcelemental.models.DriverEnum.html  qcelemental.models.FailedOperation.html  qcelemental.models.Molecule.html  qcelemental.models.OptimizationInput.html  qcelemental.models.OptimizationResult.html  qcelemental.models.ProtoModel.html  qcelemental.models.Provenance.html  qcelemental.models.Result.html  qcelemental.models.ResultInput.html  qcelemental.models.ResultProperties.html  qcelemental.molparse.contiguize_from_fragment_pattern.html  qcelemental.molparse.from_arrays.html  qcelemental.molparse.from_input_arrays.html  qcelemental.molparse.from_schema.html  qcelemental.molparse.from_string.html  qcelemental.molparse.parse_nucleus_label.html  qcelemental.molparse.reconcile_nucleus.html  qcelemental.molparse.to_schema.html  (+19 more)
devtools/: README.md
docs/: Makefile  api.rst  changelog.rst  conf.py  covalent_radii.rst  model_common.rst  model_molecule.rst  model_result.rst  models.rst  periodic_table.rst  physconst.rst  requirements.yml
nist_data/: build_period_table.py  build_physical_constants.py
qcelemental/: __init__.py  _version.py  chemistry.py  conftest.py  covalent_radii.py  datastructures.py  datum.py  dft_functional_info.py  exceptions.py  extras.py  periodic_table.py  physical_constants.py  physics.py  test_testing.py  testing.py  vanderwaals_radii.py
raw_data/: srd121_nist-codata-fundamental-physical-constants-2014-metadata.json
scripts/: build_docs.sh  format.sh  test.sh
tests/: addons.py  test_constants.py  test_covalentradii.py  test_gph_uno_bipartite.py  test_info.py  test_model_results.py  test_molecule.py  test_molparse_align_chiral.py  test_molparse_reconcile_nucleus.py  test_molparse_validate_and_fill_chgmult.py  (+3 more)
(+353 files in other folders)
