[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/MolSSI/QCElemental"
changelog = "https://github.com/MolSSI/QCElemental/docs/changelog.rst"
documentation = "http://docs.qcarchive.molssi.org/projects/qcelemental/en/latest/"
issues = "https://github.com/MolSSI/QCElemental/issues"

[project]
name = "qcelemental"
#version = "0.28.0"
dynamic = ["version"]
requires-python = ">=3.8"
description = "Core data structures for Quantum Chemistry."
authors = [
  { name="The QCArchive Development Team", email="qcarchive@molssi.org" },
]
license = { file="LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "numpy >=1.12.0; python_version=='3.8'",
    "numpy >=1.26.1; python_version>='3.9'",
    "pint >=0.10; python_version=='3.8'",
    "pint >=0.24; python_version>='3.9'",
    "pydantic >=2.0",
]

[project.optional-dependencies]
viz = [
    "nglview",  # !py38  # insufficient on pypi as also need `dot`. python-graphviz sufficient in conda.
    "setuptools; python_version>='3.12'",  # nglview needs pkg_resources
    "ipykernel <6.0",
]
align = [
    "networkx <3.0", 
    "scipy",
]
test = [
    "pytest",
    "pytest-cov",
    "codecov",
]
lint = [
    "pre-commit",
    "black >=22.1.0,<23.0a0",  # if running outside of pre-commit
    "isort",  # if running outside of pre-commit
]
docs = [  # probably >=py39
    "numpydoc",
    "docutils",
    "sphinx >=7.0.0",
    "sphinxcontrib-napoleon",
    "sphinx-rtd-theme",
    "autodoc-pydantic",
    "sphinx-automodapi",
    "sphinx-autodoc-typehints",
    "pydantic ==2.5.0",  # for now
    "pydantic-settings ==2.2.0",  # for now
]

#[tool.poetry.dependencies]
#packaging = ">=24.1"
#pytest = { version = "^7.2.2", optional = true }

#[tool.poetry.group.dev.dependencies]
#mypy = "^1.1.1"
#flake8 = "6.0.0"
#pytest-cov = "^4.0.0"
#autoflake = "^2.0.2"
#jsonschema = "^4.23.0"
#msgpack = "^1.0.8"
#    { version = "^1.22", python = "<3.10" },
#    { version = "^2.3", python = ">=3.10,<4.0.0" }
#]

[tool.black]
profile = "black"
line-length = 120
target-version = ['py38']

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.setuptools]
packages = ["qcelemental"]

[tool.setuptools.package-data]

[tool.setuptools_scm]

[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones
